fixed overlapping between icon and text of course information

--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -29,7 +29,6 @@ span.superscript-title {
 .course-info i {
   font-size: 25px;
   position: absolute;
-  padding-right: 2.5em;
   top: 20%;
 }
 .panel-group .panel {
